--- a/SQLAlchemy_for_chemists.ipynb
+++ b/SQLAlchemy_for_chemists.ipynb
@@ -1,17 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!jupyter-nbconvert SQLAlchemy_for_chemists.ipynb --to slides --post serve"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
     "Introduction to SQLAlchemy and Jupyter Notebooks\n",
     "==========================================\n",
     "\n",
-    "### Authors:\n",
+    "### John Hey\n",
+    "\n",
+    "#### Adapted from material by:\n",
     "- Lee Bergstrand\n",
     "- Matt McInnes\n",
     "\n",
@@ -20,17 +36,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Introduction to SQLAlchemy\n",
+    "Introduction to SQLAlchemy for Chemists\n",
     "=========================="
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Firstly we need to import sqlalchemy and begin creating our database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -43,7 +76,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**Note** that the string ``` 'sqlite:///:memory:' ``` sets the backend to sqlite and creates a database in memory. (RAM) \n",
+    "\n",
+    "This is useful for testing but we can change it to save to the harddisk later if we want our data to be permenant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Creating Database-Backed Classes\n",
     "---"
@@ -51,16 +101,50 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "The ORM utilizes classes inheriting from the SQLAlchemy base class. "
+    "Our next step is to define our classes which will be mapped onto tables within our database. \n",
+    "\n",
+    "We do this by defining a class in the normal pythonic way but with some extra SQLAlchemy commands. \n",
+    "\n",
+    "SQLAlchemy will then use this class to define and create the relavent tables.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In SQLAlchemy the ORM utilizes classes inheriting from the SQLAlchemy base class. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**Note:** ORMs (Object Relational Mapper) are classes which allow you to refer to data stored in your database from another language.\n",
+    "\n",
+    "Columns within a database table can usually only store scalar data (Ints, Strings etc.) an ORM allows you to map more complex datatypes onto these columns within your database. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -70,22 +154,43 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "Classes have RDBMS table attributes:\n",
-    "- Columns have datatypes (Integer, Float, etc.)\n",
-    "- Columns have constraints (Primary Key, Foreign Key, etc.)"
+    "# In our example we are going to create "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Classes define RDBMS (Relational DataBase Management Scheme) table attributes:\n",
+    "\n",
+    "- We must define the `__tablename__` attribute\n",
+    "- Then we define some `Column` attributes\n",
+    ">- Columns have datatypes (Integer, Float, etc.)\n",
+    ">- Columns have constraints (Primary Key, Foreign Key, etc.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
     "from sqlalchemy import Column, Integer, String\n",
+    "\n",
     "class User(Base):\n",
     "    __tablename__ = 'users'\n",
     "    \n",
@@ -109,10 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Base.metadata.create_all(engine)"
@@ -144,10 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy.orm import sessionmaker\n",
@@ -172,22 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<User(name='ed', fullname='Ed Jones', password='edspassword')>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ed_user = User(name='ed', fullname='Ed Jones', password='edspassword')\n",
     "session.add(ed_user)\n",
@@ -203,10 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "our_user = session.query(User).filter_by(name='ed').first()"
@@ -248,22 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ed_user is our_user"
    ]
@@ -279,10 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "session.add_all([\n",
@@ -304,10 +375,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "session.commit()"
@@ -355,23 +424,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<User(name='Edwardo', fullname='Ed Jones', password='f8s7ccs')>,\n",
-       " <User(name='fakeuser', fullname='Invalid', password='12345')>]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ed_user.name = 'Edwardo'\n",
     "\n",
@@ -390,10 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "session.rollback()"
@@ -419,44 +472,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'ed'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ed_user.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fake_user in session"
    ]
@@ -471,22 +498,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n",
-      "<User(name='wendy', fullname='Wendy Williams', password='foobar')>\n",
-      "<User(name='mary', fullname='Mary Contrary', password='xxg527')>\n",
-      "<User(name='fred', fullname='Fred Flinstone', password='blah')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for instance in session.query(User).order_by(User.id):\n",
     "    print(instance)"
@@ -509,22 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(u'ed', u'Ed Jones')\n",
-      "(u'wendy', u'Wendy Williams')\n",
-      "(u'mary', u'Mary Contrary')\n",
-      "(u'fred', u'Fred Flinstone')\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for name, fullname in session.query(User.name, User.fullname):\n",
     "    print(name, fullname)"
@@ -566,19 +567,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for user in session.query(User).filter(User.name == 'ed'):\n",
     "    print(user)"
@@ -593,21 +584,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='wendy', fullname='Wendy Williams', password='foobar')>\n",
-      "<User(name='mary', fullname='Mary Contrary', password='xxg527')>\n",
-      "<User(name='fred', fullname='Fred Flinstone', password='blah')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for user in session.query(User).filter(User.name != 'ed'):\n",
     "    print(user)"
@@ -622,20 +601,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n",
-      "<User(name='fred', fullname='Fred Flinstone', password='blah')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for user in session.query(User).filter(User.name.like('%ed%')):\n",
     "    print(user)"
@@ -650,20 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n",
-      "<User(name='wendy', fullname='Wendy Williams', password='foobar')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for user in session.query(User).filter(User.name.in_(['ed', 'wendy', 'jack'])):\n",
     "    print(user)"
@@ -678,20 +635,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='mary', fullname='Mary Contrary', password='xxg527')>\n",
-      "<User(name='fred', fullname='Fred Flinstone', password='blah')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for user in session.query(User).filter(~User.name.in_(['ed', 'wendy', 'jack'])):\n",
     "    print(user)"
@@ -706,19 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for user in session.query(User).filter(User.name == 'ed', User.fullname == 'Ed Jones'):\n",
     "    print(user)"
@@ -733,20 +669,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<User(name='ed', fullname='Ed Jones', password='f8s7ccs')>\n",
-      "<User(name='wendy', fullname='Wendy Williams', password='foobar')>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sqlalchemy import or_\n",
     "for user in session.query(User).filter(or_(User.name == 'ed', User.name == 'wendy')):\n",
@@ -770,10 +695,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import ForeignKey\n",
@@ -801,10 +724,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "User.addresses = relationship(\"Address\", order_by=Address.id, back_populates=\"user\")\n",
@@ -832,22 +753,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "jack = User(name='jack', fullname='Jack Bean', password='gjffdd')\n",
     "jack.addresses"
@@ -864,10 +772,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "jack.addresses = [Address(email_address='jack@google.com'), Address(email_address='j25@yahoo.com')]"
@@ -875,22 +781,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Address(email_address='j25@yahoo.com')>"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "jack.addresses[1]"
    ]
@@ -906,22 +799,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<User(name='jack', fullname='Jack Bean', password='gjffdd')>"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "jack.addresses[1].user"
    ]
@@ -937,23 +817,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Address(email_address='jack@google.com')>,\n",
-       " <Address(email_address='j25@yahoo.com')>]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "session.add(jack)\n",
     "\n",
@@ -965,24 +831,25 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
