--- a/SQLAlchemy_for_chemists.ipynb
+++ b/SQLAlchemy_for_chemists.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
    "source": [
     "!jupyter-nbconvert SQLAlchemy_for_chemists.ipynb --to slides --post serve"
    ]
@@ -204,7 +202,6 @@
     "    id = Column(Integer, primary_key=True)\n",
     "    name = Column(String)\n",
     "    atoms = Column(PickleType)\n",
-    "    \n",
     "    # Defines to_string() representation \n",
     "    def __repr__(self):\n",
     "        return f\"<Molecule(name={self.name}, atoms={self.atoms}, id={self.id})>\""
@@ -337,7 +334,7 @@
     }
    },
    "source": [
-    "Once you have your tables create you can then start creating objects."
+    "Once you have your tables created you can then start creating objects and mapping them onto the database."
    ]
   },
   {
@@ -1011,35 +1008,96 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "Multiple classes can be created and linked together using class relations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import ForeignKey\n",
-    "from sqlalchemy.orm import relationship\n",
-    "\n",
-    "class Address(Base):\n",
-    "    __tablename__ = 'addresses'\n",
-    "    id = Column(Integer, primary_key=True)\n",
-    "    email_address = Column(String, nullable=False)\n",
-    "    user_id = Column(Integer, ForeignKey('users.id'))\n",
-    "    user = relationship(\"User\", back_populates=\"addresses\")\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return \"<Address(email_address='%s')>\" % self.email_address"
+    "This is where the real magic starts! "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Multiple classes can be created and linked together using class relations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Many to Many: \n",
+    "\n",
+    "We can link one motif to many molecules and vice versa: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import ForeignKey, Table\n",
+    "from sqlalchemy.orm import relationship\n",
+    "\n",
+    "association_table = Table('association', Base.metadata,\n",
+    "    Column('left_id', Integer, ForeignKey('molecules_ext.id')),\n",
+    "    Column('right_id', Integer, ForeignKey('motifs.id'))\n",
+    ")\n",
+    "\n",
+    "\n",
+    "class Molecule_extended(Base):\n",
+    "    __tablename__ = 'molecules_ext'\n",
+    "    \n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    name = Column(String)\n",
+    "    atoms = Column(PickleType)\n",
+    "    \n",
+    "    motifs = relationship(\"Motif\", # relationship with Molecule table\n",
+    "                            secondary='association',\n",
+    "                            backref=\"molecules\", \n",
+    "                             )\n",
+    "    \n",
+    "    \n",
+    "    # Defines to_string() representation \n",
+    "    def __repr__(self):\n",
+    "        return f\"<Molecule(name={self.name}, atoms={self.atoms}, id={self.id})>\"\n",
+    "    \n",
+    "class Motif(Base):  # E.g. steroid, or phenyl or alcohol etc.\n",
+    "    __tablename__ = 'motifs'\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    name = Column(String, nullable=False)\n",
+    "    atoms = Column(PickleType)\n",
+    "    \n",
+    "    molecules = relationship(\"Molecule_extended\", # relationship with Molecule table\n",
+    "                             backref=\"motifs\", \n",
+    "                             secondary='association')\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"<Motif(name={self.name}, molecules={self.molecules})>\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "source": [
     "Once primary and foreign keys are established, classes can be connected together via relationships."
@@ -1048,108 +1106,217 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
-    "User.addresses = relationship(\"Address\", order_by=Address.id, back_populates=\"user\")\n",
-    "\n",
     "Base.metadata.create_all(engine) # Flush schema changes to the DBMS."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "##### Issued SQL:\n",
+    "\n",
+    "```SQL\n",
+    "PRAGMA table_info(\"molecules\")\n",
+    "\n",
+    "PRAGMA table_info(\"backbone_motif\")\n",
+    "\n",
+    "CREATE TABLE backbone_motif (\n",
+    "\tid INTEGER NOT NULL, \n",
+    "\tname VARCHAR NOT NULL, \n",
+    "\tatoms BLOB, \n",
+    "\tmolecule_id INTEGER, \n",
+    "\tPRIMARY KEY (id), \n",
+    "\tFOREIGN KEY(molecule_id) REFERENCES molecules (id)\n",
+    ")\n",
+    "\n",
+    "COMMIT\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "source": [
     "In the above mappings:\n",
-    "- ```user.addresses``` maps to a user's list of address objects.\n",
-    "- ```address.user``` maps to an address's parent user object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We create a \"Jack\" object and it initially has no addresses."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jack = User(name='jack', fullname='Jack Bean', password='gjffdd')\n",
-    "jack.addresses"
+    "- ```molecule.backbone``` maps to a molecule's list of structural motifs.\n",
+    "- ```motif.molecules``` maps to a motif's parent molecule objects."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
-    "We then add some address objects."
+    "We create a \"benzenediol\" object and it initially has no motifs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
-    "jack.addresses = [Address(email_address='jack@google.com'), Address(email_address='j25@yahoo.com')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jack.addresses[1]"
+    "benzenediol = Molecule_extended(name='benzenediol', atoms=[\"C\", \"C\", \"C\", \"C\", \"C\", \"C\", \n",
+    "                                                  \"H\", \"H\", \"H\", \"H\", \n",
+    "                                                  \"O\", \"H\", \n",
+    "                                                  \"O\", \"H\"], )\n",
+    "benzenediol.motifs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
-    "We see that the \"Jack\" object's first address's user parameter refers back to the \"Jack\" object."
+    "We can then add some motifs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jack.addresses[1].user"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "source": [
-    "When we add \"Jack\" to the session and commit, the two address objects of \"Jack\" are also committed in a cascading fashion."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "session.add(jack)\n",
+    "benzene_motif = Motif(name='benzene_ring', atoms=[\"C\", \"C\", \"C\", \"C\", \"C\", \"C\"])\n",
+    "alcohol_motif = Motif(name='Alcohol', atoms=[\"O\", \"H\"])\n",
     "\n",
-    "session.commit()\n",
+    "benzenediol.motifs = [benzene_motif, \n",
+    "                        alcohol_motif]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "benzenediol.motifs[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "We see that the \"benzenediol\" object's first motif's user parameter refers back to the \"benzenediol\" object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "benzenediol.motifs[1].molecules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "It all gets a bit recursive. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "benzenediol.motifs[1].molecules.motifs[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "When we add \"benzenediol\" to the session and commit, the two Motif objects are also committed in a cascading fashion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "session.add(benzenediol)\n",
     "\n",
-    "jack = session.query(User).filter_by(name='jack').one()\n",
-    "jack.addresses"
+    "benzenediol = session.query(Molecule).filter_by(name='benzenediol').one()\n",
+    "benzenediol.motifs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mol = session.query(Molecule).filter(Molecule.name==\"Cyclohexa-1,3,5-trienol\").one()\n",
+    "print(mol)\n",
+    "mol.motifs = []\n",
+    "print(mol.motifs) \n"
    ]
   }
  ],
@@ -1170,7 +1337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
